<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.qualoutdoor.recorder.MainActivity" >

   <item android:id="@+id/network_info"
          android:title="@string/network_info"
          app:showAsAction="always"
          app:actionLayout="@layout/view_network_info" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:alpha="125"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="110"
        android:title="@string/action_help"
        app:showAsAction="never"/>

</menu>