<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/model"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/model_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/imei"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/imei_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/mac"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/mac_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ip"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/ip_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/network_type"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/network_type_code_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

        <View style="@style/Divider"/>

        <TextView
            android:text="@string/primary_cell"
            android:gravity="center"
            style="@style/ListItem"/>

        <com.qualoutdoor.recorder.telephony.ViewCellInfo
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cell_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:connectedBackgroundColor="@color/transparent">
        </com.qualoutdoor.recorder.telephony.ViewCellInfo>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/neighbors_count"
                style="@style/ListItem"/>
            <TextView
                android:id="@+id/neighbors_count_value"
                style="@style/ListItem"
                android:text=""
                android:gravity="right|center_vertical"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>
